fixed large text floating out of container in nominationItem

--- a/src/components/nominationList/nominationItem/NominationItem.module.css
+++ b/src/components/nominationList/nominationItem/NominationItem.module.css
@@ -1,12 +1,8 @@
 .nominationContainer {
+    display: flex;
     width: 250px;
     height: 280px;
-    background-color: #ffffff;
-    display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    text-align: center;
     border-style: solid;    
     border-width: 1px;
     border-color: #212326;
@@ -16,8 +12,11 @@
 
 
 .posterContiner {
-     width: 200px;
-    height: 150px
+    display: flex;
+     /* width: 250px;  */
+    flex: 2;
+    justify-content: center;
+
 }
 
 .poster {
@@ -26,6 +25,14 @@
 }
 .nominationTitle {
     margin-left: 4px;
+     /* word-wrap: break-word; */
+}
+
+.buttonContainer {
+    display: flex;
+    flex: 1; 
+    align-items: center;
+    justify-content: center;
 }
 
 .buttonStyle {
@@ -48,10 +55,14 @@
 }
 
 .titleContainer {
-   margin-top: 0px;
-   max-height: 100px;
-    white-space: pre-wrap;
+    flex:1;
+   /* margin-top: 0px; */
+    max-height: 100px; 
+    text-align: center;
+    white-space: pre-wrap; 
+     word-wrap: break-word;
 }
+
 
 
 
